# rmcl_example

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: control.yaml  ekf.yaml  gazebo.yaml  micp_cpu.yaml  micp_gpu.yaml
launch/: rmcl_micp.launch  rmcl_micp_eval.launch  rmcl_micp_rviz.launch  rviz.launch  start_robot.launch  start_robot_launch.py
maps/: cube.dae
models/rmcl_avz/: model.config  model.sdf
models/rmcl_cube/: model.sdf
models/rmcl_cylinder/: model.config
models/rmcl_cylinder/meshes/: cylinder.dae
models/rmcl_floor/: model.sdf
models/rmcl_sphere/: model.config
models/rmcl_trays/: model.config  model.sdf
models/rmcl_trays/meshes/: trays.dae
rmcl_examples/: CMakeLists.txt  README.md
rmcl_examples/config/: micp_cpu.yaml  micp_gpu.yaml
rmcl_examples/config/ex01_convert/: rmcl_conv_pcl2_to_o1dn.yaml  rmcl_conv_pcl2_to_scan.yaml
rmcl_examples/config/ex02_loc_and_seg/: rmcl_loc_and_seg.yaml
rmcl_examples/launch/: rmcl_micp.launch  text_formatting.py
rmcl_examples/launch/ex01_convert/: rmcl_conv_pcl2_to_o1dn.launch  rmcl_conv_pcl2_to_scan.launch
rmcl_examples/launch/ex02_loc_and_seg/: rmcl_loc_and_seg.launch
rmcl_examples/maps/: corridor.dae
rmcl_examples/rviz/: ex01_convert.rviz  ex02_loc_and_seg.rviz  rmcl_micp.rviz
rmcl_sim/: CMakeLists.txt  README.md  package.xml
rmcl_sim/config/: ekf.yaml  ros_gazebo_bridge.yaml
rmcl_sim/launch/: ground_truth_localization_launch.xml  start_robot_launch.py
rmcl_sim/models/rmcl_avz/: model.sdf
rmcl_sim/models/rmcl_avz/meshes/: avz.dae
rmcl_sim/models/rmcl_corridor/: model.config  model.sdf
rmcl_sim/models/rmcl_cube/: model.config  model.sdf
rmcl_sim/models/rmcl_cylinder/: model.sdf
rmcl_sim/models/rmcl_sphere/: model.sdf
rmcl_sim/models/rmcl_sphere/meshes/: sphere.dae
rmcl_sim/models/rmcl_tray/: model.config  model.sdf
rmcl_sim/models/rmcl_tray/meshes/: tray.dae
rmcl_sim/models/rmcl_trays/: model.sdf
rmcl_sim/src/: ground_truth_localization.cpp
rmcl_sim/urdf/: ceres.urdf.xacro  common.urdf.xacro  robot.urdf.xacro  wheel.urdf.xacro
rmcl_sim/worlds/: avz.world  corridor.world  rmcl_avz.sdf  rmcl_corridor.sdf  rmcl_cube.sdf  rmcl_cylinder.sdf  rmcl_sphere.sdf  rmcl_tray.sdf  rmcl_trays.sdf  sphere.world  tray.world  trays.world
rviz/: rmcl_micp.rviz
urdf/: robot.urdf.xacro  wheel.urdf.xacro
worlds/: cube.world  cylinder.world  floor.world  sphere.world  tray.world
