<?xml version="1.0"?>
<package format="2">
    <name>rmcl_example</name>
    <version>1.0.0</version>
    <description>The rmcl_example</description>

    <maintainer email="amock@uos.de">Alexander Mock</maintainer>

    <license>BSD</license>
    <author email="amock@uos.de">Alexander Mock</author>
    
    <buildtool_depend>catkin</buildtool_depend>
    
    <exec_depend>rmcl</exec_depend>
    <exec_depend>rmcl_msgs</exec_depend>
    <exec_depend>gazebo_ros_control</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>robot_pose_ekf</exec_depend>
    <exec_depend>sick_tim</exec_depend>
    <exec_depend>gazebo_ros</exec_depend>

    <export>
        <gazebo_ros gazebo_media_path="${prefix}"/>
    </export>
</package>