<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>rmcl_sim</name>
    <version>3.0.0</version>
    <description>The rmcl_sim package</description>

    <maintainer email="amock@uos.de">Alexander Mock</maintainer>

    <license>BSD</license>
    <author email="amock@uos.de">Alexander Mock</author>
    
    <buildtool_depend>ament_cmake</buildtool_depend>
    
    <depend>urdf</depend>
    <depend>xacro</depend>
    <depend>rclcpp</depend>
    <depend>geometry_msgs</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_geometry_msgs</depend>
    
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>robot_localization</exec_depend>
    <exec_depend>imu_filter_madgwick</exec_depend>
    <exec_depend>ros_gz_bridge</exec_depend>
    <exec_depend>ros_gz_sim</exec_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
        <gazebo_ros gazebo_model_path="${prefix}/models"/>
    </export>
</package>